--- a/business2.html
+++ b/business2.html
@@ -164,44 +164,45 @@
         <h3 class="sub-tit">
           부상분리기술 적용 사례
         </h3>
+
+        <div class="subtits row">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="img/VMBD설치1.png" alt="First slide">
+          <div class="carousel-inner" role="listbox">
+            <!-- Slide One - Set the background image for this slide in the line below -->
+            <div class="carousel-item active" >
+              <img class="img-fluid " src="img/DAF-P1.JPG" alt="" width=100%>
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/VMBD설치2.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/VMBD설치3.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/현장사진2.png" alt="Forth slide">
+            <div class="carousel-item" >
+              <img class="img-fluid " src="img/DAF-P2.JPG" alt="" width=100%>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner" role="listbox">
+            <!-- Slide One - Set the background image for this slide in the line below -->
+            <div class="carousel-item active" >
+              <video muted autoplay loop width=100%>
+                <source src="img/DAF-1.MOV" type="video/mp4">
+                <strong>동영상을 재생할 수 없습니다.</strong>
+              </video>
+            </div>
+            <div class="carousel-item" >
+              <video muted autoplay loop width=100%>
+                <source src="img/DAF-2.MOV" type="video/mp4">
+                <strong>동영상을 재생할 수 없습니다.</strong>
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
         
         <h3 class="sub-tit">
           관련 특허증
         </h3>
         <div class="row">
-          <img class="img-fluid mx-3" src="certification2/특허증 - 스컴 및 부유물질 제거장치 및 스컴 및 부유물질 제거방법-1.jpg" alt="" width=30%>
-          <img class="img-fluid mx-3" src="certification2/특허증 - 플로우형 스컴 및 부유물질 제거장치, 플로우트형 스컴 및 부유물질 처리장치 및 이를 이용한 저수지의 수질 정화시스템-1.jpg" alt="" width=30%>
-          <img class="img-fluid mx-3" src="certification2/특허증 - 배오존을 이용한 부상분리와 무포기 오존 반응기를 이용한 수 처리장치-1.jpg" alt="" width=30%>
+          <img class="img-fluid " src="certification2/특허증 - 스컴 및 부유물질 제거장치 및 스컴 및 부유물질 제거방법-1.jpg" alt="" width=30%>
+          <img class="img-fluid " src="certification2/특허증 - 플로우형 스컴 및 부유물질 제거장치, 플로우트형 스컴 및 부유물질 처리장치 및 이를 이용한 저수지의 수질 정화시스템-1.jpg" alt="" width=30%>
+          <img class="img-fluid " src="certification2/특허증 - 배오존을 이용한 부상분리와 무포기 오존 반응기를 이용한 수 처리장치-1.jpg" alt="" width=30%>
         </div>
 
       </div>
