--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
   
-  <!-- 
-<link rel="shortcut icon" href="./img/favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-  -->
+
 </head>
 
 <body>
@@ -91,6 +86,7 @@
           <li class="nav-sub0 last">
             <ul>
               <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href="tech-data.html">기술자료</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
@@ -113,7 +109,6 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
