--- a/contact.html
+++ b/contact.html
@@ -119,8 +119,7 @@
         <a href="contact.html" class="side-menu text-center">고객센터</a>
         <div class="list-group">
           <a href="contact.html" class="list-group-item"><strong>상담문의</strong></a>
-          <a href="contact.html" class="list-group-item">기술자료</a>
-
+          <a href="tech-data.php" class="list-group-item">기술자료</a>
         </div>
       </div>
       <!-- Page Content -->
